# notima

./: CMakeLists.txt  README.md
.github/workflows/: build.yml  cmake.yml
cmake/: FindNotima.cmake  Notima-config.cmake
include/: CMakeLists.txt  fastq.hpp  files.hpp  gzipf.hpp  kmers.hpp  topgm.hpp
include/notima/: bit_array.hpp  codec8.hpp  integer_array.hpp  poppy.hpp  radix_array.hpp  rrr_array.hpp  sparse_array.hpp  spookyv2.hpp  stats.hpp  subword_array.hpp  tsv.hpp  vbit_array.hpp  wordy.hpp
include/notima/internal/: stats.hpp
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_bit_array.cpp  test_fastq.cpp  test_gzipf.cpp  test_integer_array.cpp  test_kmers.cpp  test_poppy.cpp  test_radix_array.cpp  test_rrr_array.cpp  test_sparse_array.cpp  test_stats.cpp  test_subword_array.cpp  test_tsv.cpp  test_vbit_array.cpp  test_wordy.cpp
util/: binom.py
